2002-12-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mn10300.c (set_arch_mach): Change argument type to
	avoid warnings.
	(r_register_name, xr_register_name): Add prototype declarations.

2002-12-08  H.J. Lu <hjl@gnu.org>

	* config/tc-ia64.c (md_apply_fix3): Remove the PCREL hack
	copied from tc-i386.c.

2002-12-08  Stephane Carrez  <stcarrez@nerim.fr>

	Fix Bug savannah/1825:
	* config/tc-m68hc11.c (STATE_INDEXED_PCREL): New relax code.
	(md_relax_table): Define specific relax for PC-rel offsets.
	(build_indexed_byte): Use a STATE_INDEXED_PCREL relax code.
	(m68hc11_relax_frag): Handle the new relax code.
	(md_convert_frag): Likewise.
	(md_estimate_size_before_relax): Likewise.

2002-12-08  Alan Modra  <amodra@bigpond.net.au>

	* subsegs.c (section_symbol): Use the symbol, not the section, name.

2002-12-05  Richard Henderson  <rth@redhat.com>

	* config/ia64.c (enum reloc_func): Add FUNC_LT_RELATIVE_X.
	(ia64_gen_real_reloc_type): Handle it.
	(pseudo_func): Add @ltoffx.
	(md_begin): Build .<ltoffx>.
	(ia64_force_relocation): True for LTOFF22X and LDXMOV.

2002-12-05  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-arm.c (arm_force_relocation): Move out of #if OBJ_ELF.
	Move OBJ_COFF TC_FORCE_RELOCATION code here so that COFF handles
	ARM_IMMEDIATE and ARM_ADRL_IMMEDIATE relocs as for ELF.
	* config/tc-arm.h (TC_FORCE_RELOCATION): Define for both ELF and
	COFF to call arm_force_relocation.

2002-12-04  David Mosberger  <davidm@hpl.hp.com>

	* config/tc-ia64.c (pseudo_func): Add "@pause" constant for "hint"
	instruction.
	(emit_one_bundle): Handle "hint" instruction.
	(operand_match): Match IA64_OPND_AR_CSD.

2002-12-04  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2dbg.c (scale_addr_delta): Correct parameter.  Move prototype
	inside #if.

2002-12-03  Nick Clifton  <nickc@redhat.com>

	* config/tc-ppc.c (ppc_cleanup): Do not set SEC_MERGE flag on
	.PPC.EMB.apuinfo sections.

2002-12-03  Richard Henderson  <rth@redhat.com>
